--- a/parts/users.jade
+++ b/parts/users.jade
@@ -64,7 +64,7 @@ template(name='user_item')
             .ui.inline.small.header(style="color:#{current_user.theme_color};") #{points}pts
             .ui.large.basic.label(style="color:#{current_user.theme_color};" title='one ratio') {{to_percent one_ratio}}%
             .ui.large.basic.label(style="color:#{current_user.theme_color};") #{flow_volume} vol
-            each levels
+            each roles
                 .ui.basic.small.label(style="color:#{theme_color};") #{this}
             unless is_this_user
                 i.red.gift.pointer.debit.big.icon
