--- a/parts/users.jade
+++ b/parts/users.jade
@@ -1,9 +1,12 @@
 template(name='users')
     .ui.padded.stackable.grid
         .four.wide.column
+            .ui.header
+                i.users.icon
+                |users
             +user_cloud
         .twelve.wide.column
-            .scrolling
+            .ui.link.list.scrolling
                 each users
                     +user_item
                     div
@@ -12,26 +15,30 @@ template(name='users')
 
 
 template(name='user_cloud')
-    i.shield.blue.large.icon
-    if selected_user_levels
-        #clear_levels.ui.primary.icon.compact.button
+    .ui.inline.header
+        i.shield.large.icon
+        |roles
+    if picked_user_roles
+        #clear_roles.ui.black.icon.compact.button
             i.remove.icon
-        each selected_user_levels
-            .unselect_level.ui.primary.compact.button
+        each picked_user_roles
+            .unpick_role.ui.black.compact.button
                 strong #{this}
-    each all_levels
-        .ui.compact.basic.button.select_level(class=cloud_tag_class) 
+    each all_roles
+        .ui.compact.basic.button.pick_role(class=cloud_tag_class) 
             strong #{this.name}
     div
-    i.tags.large.icon
-    if selected_user_tags
-        #clear_tags.ui.primary.icon.compact.button
+    .ui.inline.header
+        i.tags.large.icon
+        |tags
+    if picked_user_tags
+        #clear_tags.ui.black.icon.compact.button
             i.remove.icon
-        each selected_user_tags
-            .unselect_tag.ui.primary.compact.button
+        each picked_user_tags
+            .unpick_tag.ui.black.compact.button
                 strong #{this}
     each all_tags
-        .ui.compact.basic.button.select_tag(class=cloud_tag_class) 
+        .ui.compact.basic.button.pick_tag(class=cloud_tag_class) 
             strong #{this.name}
 
 
@@ -47,31 +54,34 @@ template(name='member_item')
             .ui.inline.small.header(style="color:#{current_user.theme_color};") #{points}pts
             .ui.large.basic.label(style="color:#{current_user.theme_color};" title='one ratio') {{to_percent one_ratio}}%
             .ui.large.basic.label(style="color:#{current_user.theme_color};") #{flow_volume} vol
-            // each levels
+            // each roles
             //     .ui.basic.small.label(style="color:#{theme_color};") #{this}
             // unless is_this_user
             //     i.red.gift.pointer.debit.big.icon
             //     i.teal.concierge.bell.pointer.request.big.icon
             //     i.blue.chat.pointer.message.big.disabled.icon
 template(name='user_item')
-    .item
-        a.zoom.pointer.mobile.hidden(href="/u/#{username}")
-            img.ui.avatar.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
-
-            a.ui.inline.header.pointer(href="/u/#{username}" style="color:#{theme_color};")
-                |#{name}
-                //- |#{username}
-            .ui.inline.small.header(style="color:#{current_user.theme_color};") #{points}pts
-            .ui.large.basic.label(style="color:#{current_user.theme_color};" title='one ratio') {{to_percent one_ratio}}%
-            .ui.large.basic.label(style="color:#{current_user.theme_color};") #{flow_volume} vol
-            each roles
-                .ui.basic.small.label(style="color:#{theme_color};") #{this}
-            unless is_this_user
-                i.red.gift.pointer.debit.big.icon
-                i.teal.concierge.bell.pointer.request.big.icon
-                i.blue.chat.pointer.message.big.disabled.icon
-
-        
+    .item.zoomer.pointer.profile
+        .rounded.image
+            img(src="{{c.url profile_image_id height=100 width=100 gravity='face' crop='fill'}}") 
+        .content
+            .header
+                .ui.inline.header.pointer.profile(style="color:#{theme_color};")
+                    |#{name}
+                    //- |#{username}
+            .description
+                span.ui.text(style="color:#{current_user.theme_color};") #{points}pts
+                span.ui.large.text(style="color:#{current_user.theme_color};" title='one ratio') {{to_percent one_ratio}}%
+                span.ui.large.text(style="color:#{current_user.theme_color};") #{flow_volume} vol
+                each roles
+                    .ui.basic.small.label(style="color:#{theme_color};") #{this}
+                unless is_this_user
+                    i.red.gift.pointer.debit.link.icon
+                    i.teal.concierge.bell.pointer.request.link.icon
+                    i.blue.chat.pointer.message.link.disabled.icon
+                each tags
+                    .ui.basic.label #{this}
+    
 
 template(name='member_card')
     .card.rounded.calc_points
@@ -114,8 +124,8 @@ template(name='member_card')
                     i.small.clock.icon
                     |!{current_status}
             // div
-            // i.line.chart.icon(title='levels')
-            // each levels
+            // i.line.chart.icon(title='roles')
+            // each roles
             //     .ui.basic.small.label(style="color:#{theme_color};") #{this}
             // unless is_this_user
             //     i.red.gift.pointer.debit.big.icon
@@ -132,7 +142,7 @@ template(name='user_card')
                 //- |#{username}
                 if spirit_animal
                     +icolor name=spirit_animal cl='ui avatar image'
-            // each levels
+            // each roles
             //     .ui.label #{this}
             // strong #{credit_count} credits
             // strong #{credit_count}/
@@ -142,8 +152,8 @@ template(name='user_card')
             // span ##{global_credit_count_rank}
             
             .ui.small.inline.header #{points}pts
-            i.line.chart.icon(title='levels')
-            each levels
+            i.line.chart.icon(title='roles')
+            each roles
                 .ui.basic.small.label(style="color:#{theme_color};") #{this}
             i.shield.icon(title='roles')
             each roles
